Update project
